--- a/nodejs-sdk/package.json
+++ b/nodejs-sdk/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "test": "jest --coverage",
+    "test:watch": "jest --watch",
     "lint": "eslint src",
     "prepublishOnly": "npm run build && npm test"
   },
