--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,15 +5,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
       - run: pip install pytest pytest-cov
       - run: pytest --cov=. --cov-report=term-missing python-sdk/tests/
+      
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
           node-version: 20
       - run: npm install
       - run: npm test
+      - run: npm run coverage
