--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "main": "index.js",
   "directories": {
     "test": "tests"
+    "coverage": "codecov",
+    "coverage": "codecov",
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "coverage": "codecov",
+    "coverage": "codecov",
   },
   "repository": {
     "type": "git",
@@ -21,6 +25,7 @@
   },
   "homepage": "https://github.com/Rigb/lovart-sdks#readme",
   "devDependencies": {
+    "codecov": "^3.8.3",
     "jest": "^30.0.4"
   },
   "dependencies": {
