Fix: Corrige les tests, package.json et le workflow CI

--- a/python-sdk/.github/workflows/ci.yml
+++ b/python-sdk/.github/workflows/ci.yml
@@ -1,24 +1,22 @@
-name: Python CI
-
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-
+name: CI
+on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.12'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e .[dev]
-    - name: Run tests
-      run: pytest tests/
+      - uses: actions/checkout@v4
+      
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
+      - run: pip install pytest pytest-cov
+      - run: pytest --cov=. --cov-report=term-missing python-sdk/tests/
+      
+      - name: Set up Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+      - run: npm install
+      - run: npm test
+      - run: npm run coverage
